--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
     "name": "school-management-system",
     "version": "1.0.0",
-    "description": "School Management System Backend",
-    "main": "server.js",
+    "description": "A comprehensive school management system for St Francis Secondary School",
+    "main": "src/index.js",
     "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js"
+        "start": "node src/index.js",
+        "dev": "nodemon src/index.js",
+        "test": "jest",
+        "setup": "node src/config/setup.js",
+        "lint": "eslint src/",
+        "format": "prettier --write src/"
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
-        "dotenv": "^16.3.1",
+        "dotenv": "^16.0.3",
         "express": "^4.18.2",
-        "jsonwebtoken": "^9.0.2",
-        "multer": "^1.4.5-lts.2",
-        "mysql2": "^3.6.5",
-        "pdfkit": "^0.17.0"
+        "jsonwebtoken": "^9.0.0",
+        "mysql2": "^3.2.0",
+        "pdfkit": "^0.13.0",
+        "winston": "^3.8.2"
     },
     "devDependencies": {
-        "nodemon": "^3.0.2"
+        "eslint": "^8.36.0",
+        "jest": "^29.5.0",
+        "nodemon": "^2.0.22",
+        "prettier": "^2.8.7"
+    },
+    "engines": {
+        "node": ">=14.0.0"
     }
 }
